<resources>
    <string name="app_name">ShoppingList</string>
    <string name="list_type_image_content_desc">List type image</string>
    <string name="dummy_list_name">Dummy list name</string>
    <string name="list_name_label_text">List Name:</string>
    <string name="list_name_edittext_hint">Enter list name (30 chars max)</string>
    <string name="list_type_label_text">List Type:</string>
    <string name="create_list_btn_text">Create List</string>
    <string name="item_name_label_text">Item Name:</string>
    <string name="item_name_edittext_hint">Enter item name (50 chars max)</string>
    <string name="item_quantity_edittext_hint">1</string>
    <string name="item_measure_edittext_hint">Measuring unit</string>
    <string name="save_item_btn_text">Save item</string>
    <string name="store_name_label_text">Store Name:</string>
    <string name="store_name_edittext_hint">Enter name of the store</string>
    <string name="store_address_label_text">Address:</string>
    <string name="store_address_edittext_hint">Enter address of the store</string>
    <string name="item_quantity_label_text">Quantity:</string>
    <string name="dummy_item_name_text">Dummy_item -- 1 Kg</string>
    <string name="create_list_activity_title">Create New List</string>
    <string name="create_item_activity_title">Add New Item</string>
    <string name="edit_item_activity_title">Edit Item</string>
    <string name="main_activity_title">Your Shopping Lists</string>
    <string name="delete_item_alert_msg">Are you sure you want to delete this item ?</string>
    <string name="delete_item_alert_confirm_text">Delete</string>
    <string name="alert_dialog_cancel_text">Cancel</string>
    <string name="alert_dialog_ok_text">Ok</string>
    <string name="discard_changes_alert_dialog_title">Discard changes ?</string>
    <string name="discard_changes_alert_dialog_msg">Are you sure you want to discard changes ?</string>
    <string name="discard_changes_alert_dialog_confirm_text">Discard</string>
    <string name="create_list_err_invalid_name">Please enter a valid list name !</string>
    <string name="no_shopping_list_err_msg">You have no shopping lists currently !\nCreate one now !!</string>
    <string name="no_item_err_msg">You have no items in your shopping list currently !\nAdd one now !!</string>
    <string name="no_connection_err_msg">No internet connection.\nPlease try again later !</string>
    <string name="failure_err_msg">Technical error !\nPlease try again later.</string>
    <string name="failure_err_title">Error</string>
    <string name="list_name_exists_err_title">List name already exists</string>
    <string name="list_name_exists_err_msg">Please use a different unique name for your new shopping list !</string>
    <string name="invalid_item_name_err_msg">Please enter a valid and unique Item name !</string>
    <string name="invalid_item_qty_err_msg">Please enter a valid item quantity value !</string>
    <string name="invalid_item_msrmnt_err_msg">Please enter a valid quantity measurement value !</string>
    <string name="invalid_store_name_err_msg">Please enter a valid Store name !</string>
    <string name="edit_icon_content_desc">Edit item</string>
    <string name="delete_icon_content_desc">Delete item</string>
    <string name="list_type_spinner_content_desc">Select a list type</string>
    <string name="signin_success_text_msg">Welcome !</string>
    <string name="list_store_success_msg">List has been stored successfully</string>
    <string name="signout_success_text_msg">Signed out successfully !</string>
    <string name="Update_list_error_msg">Error occurred while saving shopping list updates !</string>

    <string-array name="list_types_array">
        <item>Grocery</item>
        <item>Household Stuff</item>
        <item>Party</item>
        <item>Wedding</item>
        <item>Birthday</item>
        <item>Road Trip</item>
        <item>Vacation</item>
        <item>Office Supply</item>
        <item>Other</item>
    </string-array>
</resources>
