<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/item_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/item_name_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_quantity_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/item_quantity_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_extralarge"
            android:hint="@string/item_quantity_edittext_hint"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium" />

        <EditText
            android:id="@+id/item_measure_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/item_measure_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/store_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/store_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/store_name_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/store_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_address_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/store_address_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_extralarge"
            android:layout_weight="1"
            android:hint="@string/store_address_edittext_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/add_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/colorAccent"
        android:padding="@dimen/padding_medium"
        android:text="@string/add_item_btn_text" />

</LinearLayout>