<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_name_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/list_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:hint="@string/list_name_edittext_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_type_label_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/list_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/create_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/colorAccent"
        android:padding="@dimen/padding_medium"
        android:text="@string/create_list_btn_text" />

</LinearLayout>